Removing package.json from bower install

--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,12 @@
     "version": "0.1.8",
     "description": "A full-featured JavaScript Textile parser",
     "main": "lib/textile-.js",
+    "author": "Borgar Þorsteinsson",
     "ignore": [
         "bin",
         "test",
         "Makefile",
-        "index.js"
+        "index.js",
+        "package.json"
     ]
 }
