Editing another typo

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
     "name": "textile-js",
     "version": "0.1.8",
     "description": "A full-featured JavaScript Textile parser",
-    "main": "lib/textile-.js",
+    "main": "lib/textile.js",
     "author": "Borgar Þorsteinsson",
     "ignore": [
         "bin",
