--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "textile-js",
   "description": "A full-featured JavaScript Textile parser",
   "author": "Borgar Þorsteinsson <borgar@borgar.net>",
-  "version": "1.1.0",
-  "main": "./lib/textile-js",
+  "version": "1.1.1",
+  "main": "./lib/textile.js",
   "bin": "./bin/textile",
   "preferGlobal": false,
   "repository": "git://github.com/borgar/textile-js.git",
