--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "textile-js",
   "description": "A full-featured JavaScript Textile parser",
   "author": "Borgar Þorsteinsson <borgar@borgar.net>",
-  "version": "1.1.1",
-  "main": "./lib/textile.js",
+  "version": "2.0.0",
+  "scripts": {
+    "build": "webpack && WEBPACK_ENV=min webpack",
+    "dev": "webpack --progress --watch",
+    "test": "ava | tnyan"
+  },
+  "main": "./dist/textile.js",
   "bin": "./bin/textile",
   "preferGlobal": false,
   "repository": "git://github.com/borgar/textile-js.git",
@@ -11,5 +16,32 @@
   "bugs": { "url": "http://github.com/borgar/textile-js/issues" },
   "keywords": [ "textile", "markup", "html" ],
   "tags": [ "textile", "markup", "html" ],
-  "license": "MIT"
+  "license": "MIT",
+  "ava": {
+    "files": [
+      "test/*.js",
+      "!**/instiki.js",
+      "!**/code.js",
+      "!**/html.js"
+    ],
+    "source": [
+      "src/**/*.js"
+    ],
+    "tap": true,
+    "failFast": true
+  },
+  "devDependencies": {
+    "ava": "^0.14.0",
+    "babel": "^6.5.2",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-node6": "^0.2.0",
+    "eslint": "^2.9.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "tap-nyan": "0.0.2",
+    "webpack": "^1.13.0"
+  }
 }
