--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   "scripts": {
     "build": "webpack && WEBPACK_ENV=min webpack",
     "dev": "webpack --progress --watch",
-    "test": "ava | tnyan"
+    "test": "ava --tap | tnyan",
+    "coverage": "nyc report --reporter=html --reporter=text ava"
   },
   "main": "./dist/textile.js",
   "bin": "./bin/textile",
   "preferGlobal": false,
   "repository": "git://github.com/borgar/textile-js.git",
   "homepage": "https://github.com/borgar/textile-js",
-  "bugs": { "url": "http://github.com/borgar/textile-js/issues" },
-  "keywords": [ "textile", "markup", "html" ],
-  "tags": [ "textile", "markup", "html" ],
+  "bugs": {
+    "url": "http://github.com/borgar/textile-js/issues"
+  },
+  "keywords": [
+    "textile",
+    "markup",
+    "html"
+  ],
+  "tags": [
+    "textile",
+    "markup",
+    "html"
+  ],
   "license": "MIT",
   "ava": {
     "files": [
@@ -27,11 +38,11 @@
     "source": [
       "src/**/*.js"
     ],
-    "tap": true,
+    "tap": false,
     "failFast": true
   },
   "devDependencies": {
-    "ava": "^0.14.0",
+    "ava": "^0.15.0",
     "babel": "^6.5.2",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
@@ -41,6 +52,7 @@
     "eslint": "^2.9.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
+    "nyc": "^6.6.1",
     "tap-nyan": "0.0.2",
     "webpack": "^1.13.0"
   }
