Adding ignores to Bower file.
Don't know if this is needed. Don't even know if Bower is needed? Is there anyone still using that?

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "author": "Borgar Þorsteinsson",
     "ignore": [
         "bin",
+        "coverage",
+        ".nyc_output",
         "test",
         "Makefile",
         "index.js",
