--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack && WEBPACK_ENV=min webpack",
     "dev": "webpack --progress --watch",
-    "test": "ava --tap | tnyan",
-    "coverage": "nyc report --reporter=html --reporter=text ava",
+    "test": "tape test/*js | tap-nyan",
+    "coverage": "nyc report --reporter=html --reporter=text tape test/*js",
     "pub": "node scripts/publish.js",
     "dingus": "node scripts/updatedingus.js"
   },
@@ -30,21 +30,7 @@
     "html"
   ],
   "license": "MIT",
-  "ava": {
-    "files": [
-      "test/*.js",
-      "!**/instiki.js",
-      "!**/code.js",
-      "!**/html.js"
-    ],
-    "source": [
-      "src/**/*.js"
-    ],
-    "tap": false,
-    "failFast": true
-  },
   "devDependencies": {
-    "ava": "^0.15.0",
     "babel": "^6.5.2",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
@@ -55,7 +41,8 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
     "nyc": "^6.6.1",
-    "tap-nyan": "0.0.2",
+    "tap-nyan": "~1.1.0",
+    "tape": "^4.6.3",
     "webpack": "^1.13.0"
   }
 }
