--- a/package.json
+++ b/package.json
@@ -31,18 +31,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.23.0",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-node6": "^0.2.0",
     "eslint": "^2.13.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-promise": "^1.1.0",
     "nyc": "^6.6.1",
     "tape": "^4.9.0",
-    "webpack": "^1.15.0",
-    "webpack-cli": "^2.1.4"
+    "webpack": "^1.15.0"
   }
 }
