--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack && WEBPACK_ENV=min webpack",
     "dev": "webpack --progress --watch",
-    "test": "tape test/*js",
+    "test": "tape test/*js | tap-min",
+    "lint": "eslint src/*js test/*js",
     "coverage": "nyc report --reporter=html --reporter=text tape test/*js",
     "pub": "node scripts/publish.js",
     "dingus": "node scripts/updatedingus.js"
@@ -31,14 +32,20 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.13.1",
-    "eslint-loader": "^1.9.0",
-    "nyc": "^6.6.1",
-    "tape": "^4.9.0",
-    "webpack": "^1.15.0"
+    "@babel/core": "~7.8.4",
+    "@babel/plugin-proposal-class-properties": "~7.8.3",
+    "@babel/plugin-proposal-export-default-from": "~7.8.3",
+    "@babel/polyfill": "~7.8.3",
+    "@babel/preset-env": "~7.8.4",
+    "@babel/register": "~7.8.3",
+    "babel-loader": "~8.0.6",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "~2.20.1",
+    "nyc": "^15.0.0",
+    "tape": "^4.13.0",
+    "uglifyjs-webpack-plugin": "~2.2.0",
+    "webpack": "^4.41.5",
+    "webpack-command": "~0.5.0",
+    "tap-min": "~2.0.0"
   }
 }
