--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack && WEBPACK_ENV=min webpack",
     "dev": "webpack --progress --watch",
     "test": "tape test/*js | tap-min",
-    "lint": "eslint src/*js test/*js",
+    "lint": "eslint src/*js test/*js script/*js",
     "coverage": "nyc report --reporter=html --reporter=text tape test/*js",
     "pub": "node scripts/publish.js",
     "dingus": "node scripts/updatedingus.js"
