--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "textile-js",
   "description": "A full-featured JavaScript Textile parser",
   "author": "Borgar Þorsteinsson <borgar@borgar.net>",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "scripts": {
-    "build": "wp && WEBPACK_ENV=min wp",
-    "dev": "wp --progress --watch",
+    "build": "webpack --mode production",
+    "start": "webpack --mode development --watch",
+    "dev": "nodemon -w test -w src -x 'tape 'test/*.js'|tap-min'",
     "test": "tape test/*js | tap-min",
     "lint": "eslint src/*js test/*js",
     "coverage": "nyc --reporter html --reporter text tape test/*js",
@@ -44,11 +45,9 @@
     "eslint-plugin-import": "~2.20.1",
     "nyc": "~15.0.0",
     "tape": "~4.13.0",
-    "uglifyjs-webpack-plugin": "~2.2.0",
+    "tap-min": "~2.0.0",
+    "terser-webpack-plugin": "~2.3.6",
     "webpack": "~4.41.5",
-    "webpack-command": "~0.5.0"
-  },
-  "dependencies": {
-    "tap-min": "~2.0.0"
+    "webpack-cli": "~3.3.12"
   }
 }
