--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack --mode development --watch",
-    "dev": "nodemon -w test -w src -x 'tape 'test/*.js'|tap-min'",
-    "test": "tape test/*js | tap-min",
+    "dev": "nodemon -w test -w src -x 'tape -r @babel/register 'test/*.js'|tap-min'",
+    "test": "tape -r @babel/register 'test/*js' | tap-min",
     "lint": "eslint src/*js test/*js",
-    "coverage": "nyc --reporter html --reporter text tape test/*js",
+    "coverage": "nyc --reporter html --reporter text tape -r @babel/register test/*js",
     "pub": "node scripts/publish.js",
     "dingus": "node scripts/updatedingus.js"
   },
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/borgar/textile-js",
   "bugs": {
     "url": "http://github.com/borgar/textile-js/issues"
+  },
+  "funding": {
+    "type" : "individual",
+    "url" : "https://ko-fi.com/borgar"
   },
   "keywords": [
     "textile",
@@ -33,21 +37,18 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.8.4",
-    "@babel/plugin-proposal-class-properties": "~7.8.3",
-    "@babel/plugin-proposal-export-default-from": "~7.8.3",
-    "@babel/polyfill": "~7.8.3",
-    "@babel/preset-env": "~7.8.4",
-    "@babel/register": "~7.8.3",
+    "@babel/core": "~7.8.7",
+    "@babel/preset-env": "~7.8.7",
+    "@babel/register": "~7.8.6",
     "@borgar/eslint-config": "~1.1.0",
     "babel-loader": "~8.0.6",
     "eslint": "~6.8.0",
-    "eslint-plugin-import": "~2.20.1",
-    "nyc": "~15.0.0",
-    "tape": "~4.13.0",
+    "eslint-plugin-import": "~2.20.2",
+    "nyc": "~15.0.1",
     "tap-min": "~2.0.0",
+    "tape": "~4.13.3",
     "terser-webpack-plugin": "~2.3.6",
-    "webpack": "~4.41.5",
+    "webpack": "~4.41.6",
     "webpack-cli": "~3.3.12"
   }
 }
