Remove npm commands that don't do anything

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "dev": "nodemon -w test -w src -x 'tape -r @babel/register 'test/*.js'|tap-min'",
     "test": "tape -r @babel/register 'test/*js' | tap-min",
     "lint": "eslint src/ test/",
-    "coverage": "nyc --reporter html --reporter text tape -r @babel/register test/*js",
-    "pub": "node scripts/publish.js",
-    "dingus": "node scripts/updatedingus.js"
+    "coverage": "nyc --reporter html --reporter text tape -r @babel/register test/*js"
   },
   "main": "./lib/textile.js",
   "bin": "./bin/textile",
