--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "lint": "eslint src/ test/",
     "coverage": "nyc --reporter html --reporter text tape -r @babel/register test/*js"
   },
+  "type": "module",
   "main": "./lib/textile.js",
-  "bin": "./bin/textile",
+  "module": "./src/index.js",
+  "bin": "./bin/textile.js",
+  "directories": {
+    "test": "test"
+  },
   "preferGlobal": false,
   "repository": "git://github.com/borgar/textile-js.git",
   "homepage": "https://github.com/borgar/textile-js",
@@ -35,18 +40,20 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.14.3",
-    "@babel/preset-env": "~7.14.4",
-    "@babel/register": "~7.13.16",
-    "@borgar/eslint-config": "~2.2.1",
-    "babel-loader": "~8.2.2",
-    "eslint": "~7.28.0",
-    "eslint-plugin-import": "~2.23.4",
+    "@babel/core": "~7.22.15",
+    "@babel/preset-env": "~7.22.15",
+    "@babel/register": "~7.22.15",
+    "@borgar/eslint-config": "~3.1.0",
+    "@borgar/jsdoc-tsmd": "~0.1.0",
+    "babel-loader": "~9.1.3",
+    "eslint": "~8.48.0",
+    "eslint-plugin-import": "~2.28.1",
+    "eslint-plugin-jsdoc": "~46.5.1",
     "nyc": "~15.1.0",
-    "tap-min": "~2.0.0",
-    "tape": "~5.2.2",
-    "terser-webpack-plugin": "~5.1.3",
-    "webpack": "~5.38.1",
-    "webpack-cli": "~4.7.0"
+    "tap-min": "~3.0.0",
+    "tape": "~5.6.6",
+    "terser-webpack-plugin": "~5.3.9",
+    "webpack": "~5.88.2",
+    "webpack-cli": "~5.1.4"
   }
 }
